# cmake-nasm-playground

./: CMakeLists.txt  local-build.cmd
